# nft-scraper

nft_scraper/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
nft_scraper/migrations/: dump_postgres.backup_schema.sql
nft_scraper/src/: main.rs
nft_scraper/src/errors/: api_error.rs  mod.rs  service_error.rs
nft_scraper/src/models/: mod.rs  nft_contract.rs  nft_data.rs  nft_file_information.rs  nft_metadata.rs  nfts.rs
nft_scraper/src/public/: mod.rs  router.rs
nft_scraper/src/public/handlers/: mod.rs  nft.rs  populate.rs  trace.rs
