[package]
name = "nft-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
hyper = { version = "0.14", features = ["full"] }
routerify = "2.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "= 1.0.72"
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
deadpool-postgres = "0.7"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-serde_json-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
